--- a/index.html
+++ b/index.html
@@ -6,6 +6,33 @@
     <title>RockPaperScissort</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>Rock Paper Scissors</h1>
+    <div class="choices">
+      <div class="choice" id="rock">
+        <img src="images/rock.png" alt="Rock" />
+      </div>
+      <div class="choice" id="paper">
+        <img src="images/paper.png" alt="Paper" />
+      </div>
+      <div class="choice" id="scissor">
+        <img src="images/scissor.png" alt="Scissor" />
+      </div>
+    </div>
+
+    <div class="score-board">
+      <div class="score">
+        <p id="user-score">0</p>
+        <p>Player</p>
+      </div>
+      <div>
+        <p id="comp-score">0</p>
+        <p>Computer</p>
+      </div>
+    </div>
+    <div class="msg-container">
+      <p id="msg">Play your move</p>
+    </div>
+  </body>
   <script src="script.js"></script>
 </html>
