--- a/index.html
+++ b/index.html
@@ -34,5 +34,5 @@
       <p id="msg">Play your move</p>
     </div>
   </body>
-  <script src="script.js"></script>
+  <script src="app.js"></script>
 </html>
