--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
     <div class="msg-container">
       <p id="msg">Play your move</p>
     </div>
+    <footer class="footer">
+      <p>@All rights reserved</p>
+      <p>ARC-TECHNOLOGIES</p>
+    </footer>
   </body>
   <script src="app.js"></script>
 </html>
